<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_add_note">Добавить</string>
    <string name="start_label">Что использовать?</string>
    <string name="start_btn_room">Room</string>
    <string name="title">Заметки</string>
    <string name="toast_enter_name">Введите имя заметки</string>
    <string name="firebase_btn">Firebase</string>
    <string name="email_hint">email</string>
    <string name="hint_password">password</string>
    <string name="firebase_btn_login">Login</string>
    <string name="toast_fill_text">Заполните все поля</string>
</resources>