<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.start.StartFragment">


    <TextView
        android:id="@+id/start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/app_large_text"
        android:layout_margin="@dimen/app_margin"/>
    
    
    <Button
        android:id="@+id/btn_room"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/start_btn_room"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_label"
        android:layout_margin="@dimen/app_margin"/>

    <Button
        android:id="@+id/btn_firebase"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/firebase_btn"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_room"
        android:layout_margin="@dimen/app_margin"/>

    <EditText
        android:id="@+id/input_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_firebase"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btn_firebase_login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/firebase_btn_login"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        android:layout_margin="@dimen/app_margin"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>